<resources>
    <string name="app_name">AlunosFatec</string>
    <string name="action_settings">Settings</string>

    <string name="btentrar">Entrar</string>

    <!--Aluno-->
    <string name="btlistarTodos">Listar Alunos</string>
    <string name="btlistarParam">Pesquisar Aluno</string>
    <string name="btpesquisar">Pesquisar</string>
    <string name="btinserir">Inserir</string>
    <string name="btalterar">Alterar</string>
    <string name="btexcluir">Excluir</string>
    <string name="btnovoalu">Novo Aluno</string>

    <string name="lbid">Id</string>
    <string name="lblogin">Login</string>
    <string name="lbsenha">Senha</string>
    <string name="lbcurso">Curso</string>
    <string name="lbra">RA</string>

    <!--Disciplina-->
    <string name="btlistdis">Listar Disciplinas</string>
    <string name="btlistdisParam">Pesquisar Disciplina</string>
    <string name="btnovadis">Nova Disciplina</string>
    <string name="btpesquisardis">Pesquisar</string>
    <string name="btinserirdis">Inserir</string>
    <string name="btalterardis">Alterar</string>
    <string name="btexcluirdis">Excluir</string>

    <string name="lbiddis">Id</string>
    <string name="lbnomedis">Disciplina</string>
    <string name="lbprof">Professor</string>
    <string name="lbcursodis">Curso</string>
    <string name="lbperiodo">Periodo</string>

    <!--Nota-->
    <string name="btlistnota">Listar Notas</string>
    <string name="btlistnotaParam">Situação Final</string>
    <string name="btnovanota">Nova Nota</string>
    <string name="btpesquisarnota">Pesquisar</string>
    <string name="btinserirnota">Inserir</string>
    <string name="btalterarnota">Alterar</string>
    <string name="btexcluirnota">Excluir</string>

    <string name="lbidnota">Id</string>
    <string name="lbidaluno">ID Aluno</string>
    <string name="lbiddisciplina">ID Disciplina</string>
    <string name="lbp1">P1</string>
    <string name="lbp2">P2</string>
    <string name="lbsitfinal">Situaçao Final</string>

    <!--Activity-->
    <string name="title_activity_pre_menu">PreMenuActivity</string>
    <string name="title_activity_alu_menu">AluMenuActivity</string>
    <string name="title_activity_dis_menu">DisMenuActivity</string>
    <string name="title_activity_nota_menu">NotaMenuActivity</string>

    <string name="title_activity_add_alu">AddAluActivity</string>
    <string name="title_activity_list_alu">ListAluActivity</string>
    <string name="title_activity_list_alu_param">ListAluParamActivity</string>
    <string name="title_activity_upt_alu">UptAluActivity</string>

    <string name="title_activity_add_dis">AddDisActivity</string>
    <string name="title_activity_list_dis">ListDisActivity</string>
    <string name="title_activity_list_dis_param">ListDisParamActivity</string>
    <string name="title_activity_upt_dis">UptDisActivity</string>

    <string name="title_activity_add_nota">AddNotaActivity</string>
    <string name="title_activity_list_nota">ListNotaActivity</string>
    <string name="title_activity_list_nota_param">ListNotaParamActivity</string>
    <string name="title_activity_upt_nota">UptNotaActivity</string>

    <!--Botoes pre menu-->
    <string name="btareaalunos">Area Aluno</string>
    <string name="btareadisciplinas">Area Disciplina</string>
    <string name="btareanotas">Area Nota</string>

    <!--outros-->
    <string name="lbalunologado">AlunoLogado</string>
    <string name="btsalvar">Salvar</string>

</resources>
