<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="#2196F3" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbidaluno" />

    <EditText
        android:id = "@+id/idaluno"
        android:layout_width="200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbiddisciplina" />

    <EditText
        android:id = "@+id/iddisciplina"
        android:layout_width="200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbp1"/>

    <EditText
        android:id = "@+id/p1"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbp2"/>

    <EditText
        android:id = "@+id/p2"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbsitfinal"/>

    <EditText
        android:id = "@+id/sitfinal"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id = "@+id/btalterarnota"
            android:layout_width = "95dp"
            android:layout_height = "wrap_content"
            android:background="#3F51B5"
            android:textColor="#FFFFFF"
            android:text = "@string/btalterarnota" />

        <Space
            android:layout_width="10dp"
            android:layout_height="47dp" />

        <Button
            android:id = "@+id/btexcluirnota"
            android:layout_width = "95dp"
            android:layout_height = "wrap_content"
            android:background="#3F51B5"
            android:textColor="#FFFFFF"
            android:text = "@string/btexcluirnota" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00BCD4" />

</LinearLayout>
