<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="#416D42" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblogin" />

    <EditText
        android:id = "@+id/login"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbsenha"/>

    <EditText
        android:id = "@+id/senha"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbra"/>

    <EditText
        android:id = "@+id/ra"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbcurso"/>

    <EditText
        android:id = "@+id/curso"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id = "@+id/btalterar"
            android:layout_width = "95dp"
            android:layout_height = "wrap_content"
            android:background="#027E72"
            android:textColor="#FFFFFF"
            android:text = "@string/btalterar" />

        <Space
            android:layout_width="10dp"
            android:layout_height="47dp" />

        <Button
            android:id = "@+id/btexcluir"
            android:layout_width = "95dp"
            android:layout_height = "wrap_content"
            android:background="#027E72"
            android:textColor="#FFFFFF"
            android:text = "@string/btexcluir" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4CAF50" />

</LinearLayout>
