<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:background="#5F0904" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbnomedis" />

    <EditText
        android:id = "@+id/nomedis"
        android:layout_width="200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbprof"/>

    <EditText
        android:id = "@+id/prof"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbcursodis"/>

    <EditText
        android:id = "@+id/curso"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbperiodo"/>

    <EditText
        android:id = "@+id/periodo"
        android:layout_width = "200dp"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <Button
        android:id="@+id/btinserirdis"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#A0140A"
        android:textColor="#FFFFFF"
        android:text="@string/btinserirdis" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="28dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:background="#FF1000" />

</LinearLayout>