<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="#5F0904" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

    <Button
        android:id="@+id/btlistdis"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#A0140A"
        android:textColor="#FFFFFF"
        android:text="@string/btlistdis" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/btlistdisParam"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#A0140A"
        android:textColor="#FFFFFF"
        android:text="@string/btlistdisParam" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/btnovadis"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#A0140A"
        android:textColor="#FFFFFF"
        android:text="@string/btnovadis" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="314dp"
        android:background="#FF1000" />

</LinearLayout>