<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="#2196F3" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

    <Button
        android:id="@+id/btlistnota"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        android:text="@string/btlistnota" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/btlistnotaParam"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        android:text="@string/btlistnotaParam" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/btnovanota"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        android:text="@string/btnovanota" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="314dp"
        android:background="#00BCD4" />

</LinearLayout>